--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://erickhernandez.dev/"
+baseURL: "https://blog.erickhernandez.dev/"
 languageCode: "en-us"
 title: "Erick Hernandez Curiel"
 theme: "anubis"
